--- a/base-tools/Dockerfile
+++ b/base-tools/Dockerfile
@@ -1,12 +1,12 @@
-ARG BASE_IMAGE=python:slim
+ARG BASE_IMAGE=python:3-slim-buster
 FROM ${BASE_IMAGE}
 
-ARG CMAKE_VERSION=3.14
-ARG CMAKE_FULL_VERSION=${CMAKE_VERSION}.2
+ARG CMAKE_VERSION=3.15
+ARG CMAKE_FULL_VERSION=${CMAKE_VERSION}.5
 ARG CMAKE_DOWNLOAD=https://github.com/Kitware/CMake/releases/download/v${CMAKE_FULL_VERSION}/cmake-${CMAKE_FULL_VERSION}-Linux-x86_64.tar.gz
 
-ARG CONAN_VERSION=1.14
-ARG CONAN_FULL_VERSION=${CONAN_VERSION}.3
+ARG CONAN_VERSION=1.20
+ARG CONAN_FULL_VERSION=${CONAN_VERSION}.2
 
 ENV CMAKE_VERSION ${CMAKE_VERSION} 
 ENV CMAKE_MODULE_PATH /usr/local/share/cmake-${CMAKE_VERSION}/Modules
