--- a/.github/workflows/scripting.yml
+++ b/.github/workflows/scripting.yml
@@ -1,8 +1,8 @@
-name: CI-Ruby
+name: CI-Scripting
 
 on:
   push:
-    branches: [ ruby ]
+    branches: [ scripting ]
 
 jobs:
   build:
@@ -19,22 +19,29 @@ jobs:
     - name: Get docker cache
       run: |
         docker pull jonasprogrammer/dev-tools:ruby-${{matrix.ruby}} || true
+        docker pull jonasprogrammer/dev-tools:anaconda3-${{matrix.anaconda3}} || true
 
-    - name: Build base image
+    - name: Set ruby tag
+      if: ${{matrix.ruby}}
+      run: |
+        echo "::set-env name=BUILD_TAG::ruby-${{matrix.ruby}}"
+    - name: Build ruby image
+      if: ${{matrix.ruby}}
       uses: docker/build-push-action@v1.1.0
       with:
         dockerfile: Dockerfile.ruby
         repository: jonasprogrammer/dev-tools
-        tags: ruby-${{matrix.ruby}}
+        tags: ${{env.BUILD_TAG}}
         build_args: BASE_IMAGE=ruby:${{matrix.ruby}}
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_TOKEN}}
+
     - name: Build ssh image
       uses: docker/build-push-action@v1.1.0
       with:
         dockerfile: Dockerfile.ssh
         repository: jonasprogrammer/dev-tools
-        tags: ssh-ruby-${{matrix.ruby}}
-        build_args: BASE_IMAGE=jonasprogrammer/dev-tools:ruby-${{matrix.ruby}}
+        tags: ssh-${{env.BUILD_TAG}}
+        build_args: BASE_IMAGE=jonasprogrammer/dev-tools:${{env.BUILD_TAG}}
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_TOKEN}}
