--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         dockerfile: Dockerfile.base
         repository: jonasprogrammer/dev-tools
-        tags: base-cm${{matrix.cmake}}-cn${{matrix.conan}}}}
+        tags: base-cm${{matrix.cmake}}-cn${{matrix.conan}}
         build_args: CONAN_VERSION=${{matrix.conan}},CMAKE_VERSION=${{matrix.cmake}}
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_TOKEN}}
