--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -1,10 +1,10 @@
-ARG BASE_IMAGE=debian:buster
+ARG BASE_IMAGE=debian:bullseye
 FROM ${BASE_IMAGE} AS jp-builder-base-image
 
-ARG CMAKE_VERSION=3.20.2
+ARG CMAKE_VERSION=3.22.1
 ARG CMAKE_DOWNLOAD=https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-Linux-x86_64.tar.gz
 
-ARG CONAN_VERSION=1.36.0
+ARG CONAN_VERSION=1.43.0
 ARG CONAN_DOWNLOAD=https://github.com/conan-io/conan/releases/download/${CONAN_VERSION}/conan-ubuntu-64.deb
 
 ARG UID=4200
